[tool.poetry]
name = "slmsuite"
version = "0.1.0"
description = "SLM Suite for spatial light modulator simulations"
authors = ["Luis Mickeler <lmickeler@phys.ethz.ch>"]
readme = "README_PYPI.md"
license = "MIT"
homepage = "https://github.com/slmsuite/slmsuite"
documentation = "https://slmsuite.readthedocs.io/en/latest/"

[tool.poetry.dependencies]
python = ">=3.8"
numpy = "*"
scipy = "*"
opencv-python = "*"
matplotlib = "*"
h5py = "*"
tqdm = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
